weighed pros and cons of different training libraries and fine-tuning vs training from scratch

--- a/MRI.ipynb
+++ b/MRI.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CS222-UIUC/course-project-mri-detector/blob/Pros-Cons-Library-Training/MRI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -8,29 +18,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vRay-IKmIlH4",
-        "outputId": "6b276de4-e93d-445e-91a5-417e24166278"
+        "outputId": "6d5fcd23-5eb4-4ffd-b821-23a5906acc7e"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting flask-ngrok\n",
             "  Downloading flask_ngrok-0.0.25-py3-none-any.whl (3.1 kB)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (from flask-ngrok) (2.25.1)\n",
-            "Requirement already satisfied: Flask>=0.8 in /usr/local/lib/python3.8/dist-packages (from flask-ngrok) (2.2.3)\n",
-            "Requirement already satisfied: importlib-metadata>=3.6.0 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (6.0.0)\n",
-            "Requirement already satisfied: Jinja2>=3.0 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (3.1.2)\n",
-            "Requirement already satisfied: click>=8.0 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (8.1.3)\n",
-            "Requirement already satisfied: itsdangerous>=2.0 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (2.1.2)\n",
-            "Requirement already satisfied: Werkzeug>=2.2.2 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (2.2.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (2022.12.7)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (1.26.14)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (2.10)\n",
-            "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (4.0.0)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.8/dist-packages (from importlib-metadata>=3.6.0->Flask>=0.8->flask-ngrok) (3.15.0)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.8/dist-packages (from Jinja2>=3.0->Flask>=0.8->flask-ngrok) (2.1.2)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.9/dist-packages (from flask-ngrok) (2.27.1)\n",
+            "Requirement already satisfied: Flask>=0.8 in /usr/local/lib/python3.9/dist-packages (from flask-ngrok) (2.2.3)\n",
+            "Requirement already satisfied: Werkzeug>=2.2.2 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (2.2.3)\n",
+            "Requirement already satisfied: itsdangerous>=2.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (2.1.2)\n",
+            "Requirement already satisfied: importlib-metadata>=3.6.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (6.1.0)\n",
+            "Requirement already satisfied: click>=8.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (8.1.3)\n",
+            "Requirement already satisfied: Jinja2>=3.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (3.1.2)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (2.0.12)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (3.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (2022.12.7)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (1.26.15)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.9/dist-packages (from importlib-metadata>=3.6.0->Flask>=0.8->flask-ngrok) (3.15.0)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.9/dist-packages (from Jinja2>=3.0->Flask>=0.8->flask-ngrok) (2.1.2)\n",
             "Installing collected packages: flask-ngrok\n",
             "Successfully installed flask-ngrok-0.0.25\n"
           ]
@@ -82,30 +92,23 @@
       "execution_count": null,
       "metadata": {
         "colab": {
-          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "MYatV68EK0P2",
-        "outputId": "cf018489-e17d-490e-a540-33dc2500c623"
+        "outputId": "a0ead29e-b1da-497f-b36f-279b5af8f766"
       },
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             " * Serving Flask app '__main__'\n",
             " * Debug mode: off\n"
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "INFO:werkzeug:\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
             " * Running on http://127.0.0.1:5000\n",
@@ -113,25 +116,11 @@
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
+          "output_type": "stream",
           "name": "stdout",
-          "output_type": "stream",
           "text": [
-            " * Running on http://821f-34-86-213-103.ngrok.io\n",
+            " * Running on http://fda0-35-224-109-166.ngrok.io\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
-          ]
-        },
-        {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:werkzeug:127.0.0.1 - - [28/Feb/2023 23:06:21] \"GET / HTTP/1.1\" 200 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [28/Feb/2023 23:06:23] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
           ]
         }
       ],
@@ -167,7 +156,7 @@
       "metadata": {
         "id": "9yI8yPferHSs"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +184,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CFXc0kO8sKIN",
-        "outputId": "684c114d-afbd-4983-a99e-cc14737c8a97"
+        "outputId": "d27fab59-71ea-4485-883e-f43889587af0"
       },
       "execution_count": null,
       "outputs": [
@@ -225,15 +214,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "**Chosen**: ViT"
-      ],
-      "metadata": {
-        "id": "IY6JbX4e91AE"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "table2 = [['Model', 'Pros', 'Cons'],\n",
@@ -245,7 +225,7 @@
       "metadata": {
         "id": "eEnAQV9p9zBF"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,9 +238,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FkFtm9A9uubo",
-        "outputId": "961080cf-3f7f-48c2-83e3-93f10d7b4139"
+        "outputId": "3cb9745f-49cc-4ac0-9320-7d80416b63dc"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,11 +269,142 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Chosen**: Vision Transformers (ViT)"
+      ],
+      "metadata": {
+        "id": "Lz36yYRqVyJC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# About Vision Transformers\n",
+        "First introduced in 2020 by Google Brain, ViT is a powerful and efficient model that translates the popular Transformer models in NLP to computer vision.\n",
+        "\n",
+        "## Model Architecture\n",
+        "\n",
+        "![image.png](https://viso.ai/wp-content/uploads/2021/09/vision-transformer-vit.png)\n",
+        "\n",
+        "As we can see, an image is broken into patches of fixed size like 16x16 or 32x32 (which is why \"An Image is worth 16x16 words\").\n",
+        "\n",
+        "The patches are flattened and sent to the encoder through a linear projection. To keep track of where each patch is, a positional embedding vector is also sent into the encoder as an input.\n",
+        "\n",
+        "![image1.png](https://github.com/lucidrains/vit-pytorch/raw/main/images/vit.gif)\n",
+        "\n",
+        "The first token of the transformer is special.\n",
+        "\n",
+        "The encoder then combines the patches with the positional embedding vector. Its output is passed directly into an MLP to obtain a classification output."
+      ],
+      "metadata": {
+        "id": "fLYlUTLIV4YI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "table3 = [['Library', 'Pros', 'Cons'],\n",
+        "         ['TensorFlow', 'well documented with a large community; \\ngood framework for neural networks; \\nhas a dedicated medical imaging library called TensorFlow Medical Imaging ', 'is more difficult to use/learn; \\nis slower when training larger data models; \\nrequires more code to do simple tasks;'],\n",
+        "         ['PyTorch', 'beginner friendly library (easy to use); \\nhas dynamic computational graph which allows for more flexibility in building models', 'fewer resources and features than TensorFlow; \\nnot as much connection into apps (used more for research)'],\n",
+        "         ['JAX', 'built for high speed numerical computing; \\nhas built in engine for building deep learnig models; \\nsupports python and numpy;', 'fewer resources than Pytorch and TensorFlow; \\n']]"
+      ],
+      "metadata": {
+        "id": "5gvbw_YPL1OJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tabulate(table3, headers='firstrow', tablefmt='fancy_grid'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r5VimN48SMol",
+        "outputId": "113ae516-8cce-4814-ab4c-d30ab878efd3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "╒════════════╤══════════════════════════════════════════════════════════════════════════════════════╤═══════════════════════════════════════════════════════════╕\n",
+            "│ Library    │ Pros                                                                                 │ Cons                                                      │\n",
+            "╞════════════╪══════════════════════════════════════════════════════════════════════════════════════╪═══════════════════════════════════════════════════════════╡\n",
+            "│ TensorFlow │ well documented with a large community;                                              │ is more difficult to use/learn;                           │\n",
+            "│            │ good framework for neural networks;                                                  │ is slower when training larger data models;               │\n",
+            "│            │ has a dedicated medical imaging library called TensorFlow Medical Imaging            │ requires more code to do simple tasks;                    │\n",
+            "├────────────┼──────────────────────────────────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤\n",
+            "│ PyTorch    │ beginner friendly library (easy to use);                                             │ fewer resources and features than TensorFlow;             │\n",
+            "│            │ has dynamic computational graph which allows for more flexibility in building models │ not as much connection into apps (used more for research) │\n",
+            "├────────────┼──────────────────────────────────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤\n",
+            "│ JAX        │ built for high speed numerical computing;                                            │ fewer resources than Pytorch and TensorFlow;              │\n",
+            "│            │ has built in engine for building deep learnig models;                                │                                                           │\n",
+            "│            │ supports python and numpy;                                                           │                                                           │\n",
+            "╘════════════╧══════════════════════════════════════════════════════════════════════════════════════╧═══════════════════════════════════════════════════════════╛\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "table4 = [['Fine-tuning vs. Train from Scratch', 'Pros', 'Cons'],\n",
+        "         ['Fine-tuning', 'Better performance; \\nLess computationally expensive; \\nLess data okay', 'Will not help us learn how to train a model; \\nUnderfitting is likely if pre-trained model is too big'],\n",
+        "         ['Train from Scratch', 'Hands-on experience with model traning; \\nGain familiarity with environment; \\nNo pre-existing bias', 'Worse performance; \\nSlower to implement;\\nMore complicated;\\nHigher chance of overfitting']]"
+      ],
+      "metadata": {
+        "id": "5CmqUuwGSgrV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tabulate(table4, headers='firstrow', tablefmt='fancy_grid'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gkMyy3X8SlVh",
+        "outputId": "7b9ca98c-9f17-4912-edf9-f0b14e940fa7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "╒══════════════════════════════════════╤══════════════════════════════════════════╤════════════════════════════════════════════════════════╕\n",
+            "│ Fine-tuning vs. Train from Scratch   │ Pros                                     │ Cons                                                   │\n",
+            "╞══════════════════════════════════════╪══════════════════════════════════════════╪════════════════════════════════════════════════════════╡\n",
+            "│ Fine-tuning                          │ Better performance;                      │ Will not help us learn how to train a model;           │\n",
+            "│                                      │ Less computationally expensive;          │ Underfitting is likely if pre-trained model is too big │\n",
+            "│                                      │ Less data okay                           │                                                        │\n",
+            "├──────────────────────────────────────┼──────────────────────────────────────────┼────────────────────────────────────────────────────────┤\n",
+            "│ Train from Scratch                   │ Hands-on experience with model traning;  │ Worse performance;                                     │\n",
+            "│                                      │ Gain familiarity with environment;       │ Slower to implement;                                   │\n",
+            "│                                      │ No pre-existing bias                     │ More complicated;                                      │\n",
+            "│                                      │                                          │ Higher chance of overfitting                           │\n",
+            "╘══════════════════════════════════════╧══════════════════════════════════════════╧════════════════════════════════════════════════════════╛\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
