fixed table formatting

--- a/MRI.ipynb
+++ b/MRI.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vRay-IKmIlH4",
-        "outputId": "6d5fcd23-5eb4-4ffd-b821-23a5906acc7e"
+        "outputId": "c5290e1d-cfe1-4c68-9a47-995d0799cd9d"
       },
       "outputs": [
         {
@@ -26,23 +26,20 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting flask-ngrok\n",
-            "  Downloading flask_ngrok-0.0.25-py3-none-any.whl (3.1 kB)\n",
+            "Requirement already satisfied: flask-ngrok in /usr/local/lib/python3.9/dist-packages (0.0.25)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.9/dist-packages (from flask-ngrok) (2.27.1)\n",
             "Requirement already satisfied: Flask>=0.8 in /usr/local/lib/python3.9/dist-packages (from flask-ngrok) (2.2.3)\n",
-            "Requirement already satisfied: Werkzeug>=2.2.2 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (2.2.3)\n",
-            "Requirement already satisfied: itsdangerous>=2.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (2.1.2)\n",
-            "Requirement already satisfied: importlib-metadata>=3.6.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (6.1.0)\n",
             "Requirement already satisfied: click>=8.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (8.1.3)\n",
+            "Requirement already satisfied: itsdangerous>=2.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (2.1.2)\n",
+            "Requirement already satisfied: Werkzeug>=2.2.2 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (2.2.3)\n",
             "Requirement already satisfied: Jinja2>=3.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (3.1.2)\n",
-            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (2.0.12)\n",
+            "Requirement already satisfied: importlib-metadata>=3.6.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (6.1.0)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (3.4)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (2022.12.7)\n",
             "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (1.26.15)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (2.0.12)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.9/dist-packages (from importlib-metadata>=3.6.0->Flask>=0.8->flask-ngrok) (3.15.0)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.9/dist-packages (from Jinja2>=3.0->Flask>=0.8->flask-ngrok) (2.1.2)\n",
-            "Installing collected packages: flask-ngrok\n",
-            "Successfully installed flask-ngrok-0.0.25\n"
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.9/dist-packages (from Jinja2>=3.0->Flask>=0.8->flask-ngrok) (2.1.2)\n"
           ]
         }
       ],
@@ -52,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "id": "gvdV9b0IKh2Q"
       },
@@ -64,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "J_bmIPFnKopM"
       },
@@ -76,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
         "id": "cXxwupVUKveu"
       },
@@ -89,13 +86,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MYatV68EK0P2",
-        "outputId": "a0ead29e-b1da-497f-b36f-279b5af8f766"
+        "outputId": "83ac6295-a99b-4985-99a0-68d49167e027"
       },
       "outputs": [
         {
@@ -119,7 +116,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " * Running on http://fda0-35-224-109-166.ngrok.io\n",
+            " * Running on http://dc2c-35-224-109-166.ngrok.io\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ]
         }
@@ -136,7 +133,7 @@
       "metadata": {
         "id": "U0As6R8HY0W8"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -156,7 +153,7 @@
       "metadata": {
         "id": "9yI8yPferHSs"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -171,7 +168,7 @@
       "metadata": {
         "id": "dbggZZ2YrNdW"
       },
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -184,9 +181,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CFXc0kO8sKIN",
-        "outputId": "d27fab59-71ea-4485-883e-f43889587af0"
+        "outputId": "2f622a4b-7ae4-4b3c-9461-28481a098020"
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +222,7 @@
       "metadata": {
         "id": "eEnAQV9p9zBF"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -238,9 +235,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FkFtm9A9uubo",
-        "outputId": "3cb9745f-49cc-4ac0-9320-7d80416b63dc"
+        "outputId": "8a229c0a-2513-4cd3-e566-a357e8a8d443"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,14 +304,14 @@
       "cell_type": "code",
       "source": [
         "table3 = [['Library', 'Pros', 'Cons'],\n",
-        "         ['TensorFlow', 'well documented with a large community; \\ngood framework for neural networks; \\nhas a dedicated medical imaging library called TensorFlow Medical Imaging ', 'is more difficult to use/learn; \\nis slower when training larger data models; \\nrequires more code to do simple tasks;'],\n",
-        "         ['PyTorch', 'beginner friendly library (easy to use); \\nhas dynamic computational graph which allows for more flexibility in building models', 'fewer resources and features than TensorFlow; \\nnot as much connection into apps (used more for research)'],\n",
+        "         ['TensorFlow', 'well documented with a large community; \\ngood framework for neural networks; \\nhas a dedicated medical imaging library called \\nTensorFlow Medical Imaging ', 'is more difficult to use/learn; \\nis slower when training larger data models; \\nrequires more code to do simple tasks;'],\n",
+        "         ['PyTorch', 'beginner friendly library (easy to use); \\nhas dynamic computational graph which allows for\\n more flexibility in building models', 'fewer resources and features than TensorFlow; \\nnot as much connection into apps (used more for research)'],\n",
         "         ['JAX', 'built for high speed numerical computing; \\nhas built in engine for building deep learnig models; \\nsupports python and numpy;', 'fewer resources than Pytorch and TensorFlow; \\n']]"
       ],
       "metadata": {
         "id": "5gvbw_YPL1OJ"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -327,28 +324,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r5VimN48SMol",
-        "outputId": "113ae516-8cce-4814-ab4c-d30ab878efd3"
+        "outputId": "1864e196-1dca-4d0e-8896-18a1d8f429b5"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "╒════════════╤══════════════════════════════════════════════════════════════════════════════════════╤═══════════════════════════════════════════════════════════╕\n",
-            "│ Library    │ Pros                                                                                 │ Cons                                                      │\n",
-            "╞════════════╪══════════════════════════════════════════════════════════════════════════════════════╪═══════════════════════════════════════════════════════════╡\n",
-            "│ TensorFlow │ well documented with a large community;                                              │ is more difficult to use/learn;                           │\n",
-            "│            │ good framework for neural networks;                                                  │ is slower when training larger data models;               │\n",
-            "│            │ has a dedicated medical imaging library called TensorFlow Medical Imaging            │ requires more code to do simple tasks;                    │\n",
-            "├────────────┼──────────────────────────────────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤\n",
-            "│ PyTorch    │ beginner friendly library (easy to use);                                             │ fewer resources and features than TensorFlow;             │\n",
-            "│            │ has dynamic computational graph which allows for more flexibility in building models │ not as much connection into apps (used more for research) │\n",
-            "├────────────┼──────────────────────────────────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤\n",
-            "│ JAX        │ built for high speed numerical computing;                                            │ fewer resources than Pytorch and TensorFlow;              │\n",
-            "│            │ has built in engine for building deep learnig models;                                │                                                           │\n",
-            "│            │ supports python and numpy;                                                           │                                                           │\n",
-            "╘════════════╧══════════════════════════════════════════════════════════════════════════════════════╧═══════════════════════════════════════════════════════════╛\n"
+            "╒════════════╤════════════════════════════════════════════════════════╤═══════════════════════════════════════════════════════════╕\n",
+            "│ Library    │ Pros                                                   │ Cons                                                      │\n",
+            "╞════════════╪════════════════════════════════════════════════════════╪═══════════════════════════════════════════════════════════╡\n",
+            "│ TensorFlow │ well documented with a large community;                │ is more difficult to use/learn;                           │\n",
+            "│            │ good framework for neural networks;                    │ is slower when training larger data models;               │\n",
+            "│            │ has a dedicated medical imaging library called         │ requires more code to do simple tasks;                    │\n",
+            "│            │ TensorFlow Medical Imaging                             │                                                           │\n",
+            "├────────────┼────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤\n",
+            "│ PyTorch    │ beginner friendly library (easy to use);               │ fewer resources and features than TensorFlow;             │\n",
+            "│            │ has dynamic computational graph which allows for       │ not as much connection into apps (used more for research) │\n",
+            "│            │  more flexibility in building models                   │                                                           │\n",
+            "├────────────┼────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤\n",
+            "│ JAX        │ built for high speed numerical computing;              │ fewer resources than Pytorch and TensorFlow;              │\n",
+            "│            │ has built in engine for building deep learnig models;  │                                                           │\n",
+            "│            │ supports python and numpy;                             │                                                           │\n",
+            "╘════════════╧════════════════════════════════════════════════════════╧═══════════════════════════════════════════════════════════╛\n"
           ]
         }
       ]
@@ -363,7 +362,7 @@
       "metadata": {
         "id": "5CmqUuwGSgrV"
       },
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -376,9 +375,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gkMyy3X8SlVh",
-        "outputId": "7b9ca98c-9f17-4912-edf9-f0b14e940fa7"
+        "outputId": "ca01ec1a-1ae6-4b9e-c531-ca252a602626"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
