--- a/ViT_Model.ipynb
+++ b/ViT_Model.ipynb
@@ -5315,7 +5315,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Saving Checkpoint and Evaluation"
+        "# Saving Checkpoint"
       ],
       "metadata": {
         "id": "8GXmDD1SfHLj"
@@ -5390,8 +5390,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Prediction"
+      ],
+      "metadata": {
+        "id": "4nXIhcjSlhht"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "checkpoint_path = \"gdrive/MyDrive/Colab Notebooks/Datasets/model_checkpoint.pth\"\n",
+        "\n",
         "#load model from checkpoint\n",
         "model.load_state_dict(torch.load(checkpoint_path))\n",
         "model.eval()"
@@ -5455,15 +5466,6 @@
           "execution_count": 46
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Prediction"
-      ],
-      "metadata": {
-        "id": "4nXIhcjSlhht"
-      }
     },
     {
       "cell_type": "code",
